[SELC-4660] feat: getDelegations with search and pagination filters (#421)