@@ -6,6 +6,9 @@ import io.swagger.annotations.ApiParam;
 import it.pagopa.selfcare.commons.base.logging.LogUtils;
 import it.pagopa.selfcare.commons.base.security.SelfCareAuthority;
 import it.pagopa.selfcare.commons.base.security.SelfCareUser;
+import it.pagopa.selfcare.dashboard.connector.model.delegation.GetDelegationParameters;
+import it.pagopa.selfcare.dashboard.connector.model.delegation.GetDelegationsMode;
+import it.pagopa.selfcare.dashboard.connector.model.delegation.Order;
 import it.pagopa.selfcare.dashboard.connector.model.institution.GeographicTaxonomyList;
 import it.pagopa.selfcare.dashboard.connector.model.institution.Institution;
 import it.pagopa.selfcare.dashboard.connector.model.institution.InstitutionInfo;
@@ -35,10 +38,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import javax.validation.Valid;
 import java.io.IOException;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -344,9 +344,14 @@ public class InstitutionController {
                                                                    @RequestParam(name = "productId", required = false) String productId) {
         log.trace("getDelegationsUsingFrom start");
         log.debug("getDelegationsUsingFrom institutionId = {}, institutionDto{}", institutionId, productId);
-        ResponseEntity<List<DelegationResource>> result = ResponseEntity.status(HttpStatus.OK).body(delegationService.getDelegations(institutionId, null, productId).stream()
+        GetDelegationParameters delegationParameters = GetDelegationParameters.builder()
+                .from(institutionId)
+                .productId(productId)
+                .build();
+
+        ResponseEntity<List<DelegationResource>> result = ResponseEntity.status(HttpStatus.OK).body(delegationService.getDelegations(delegationParameters).stream()
                 .map(delegationMapper::toDelegationResource)
-                .collect(Collectors.toList()));
+                .toList());
         log.debug("getDelegationsUsingFrom result = {}", result);
         log.trace("getDelegationsUsingFrom end");
         return result;
@@ -368,12 +373,34 @@ public class InstitutionController {
     public ResponseEntity<List<DelegationResource>> getDelegationsUsingTo(@ApiParam("${swagger.dashboard.delegation.model.to}")
                                                                    @PathVariable("institutionId") String institutionId,
                                                                    @ApiParam("${swagger.dashboard.delegation.model.productId}")
-                                                                   @RequestParam(name = "productId", required = false) String productId) {
+                                                                   @RequestParam(name = "productId", required = false) String productId,
+                                                                   @ApiParam("${swagger.dashboard.delegation.model.description}")
+                                                                   @RequestParam(name = "search", required = false) String search,
+                                                                   @ApiParam("${swagger.dashboard.delegation.model.taxCode}")
+                                                                   @RequestParam(name = "taxCode", required = false) String taxCode,
+                                                                   @ApiParam("${swagger.dashboard.delegation.delegations.mode}")
+                                                                   @RequestParam(name = "mode", required = false) GetDelegationsMode mode,
+                                                                   @ApiParam("${swagger.dashboard.delegation.delegations.order}")
+                                                                   @RequestParam(name = "order", required = false) Order order,
+                                                                   @RequestParam(name = "page", required = false) Integer page,
+                                                                   @RequestParam(name = "size", required = false) Integer size) {
         log.trace("getDelegationsUsingTo start");
         log.debug("getDelegationsUsingTo institutionId = {}, institutionDto{}", institutionId, productId);
-        ResponseEntity<List<DelegationResource>> result = ResponseEntity.status(HttpStatus.OK).body(delegationService.getDelegations(null, institutionId, productId).stream()
+
+        GetDelegationParameters delegationParameters = GetDelegationParameters.builder()
+                .to(institutionId)
+                .productId(productId)
+                .search(search)
+                .taxCode(taxCode)
+                .mode(Objects.nonNull(mode) ? mode.name() : null)
+                .order(Objects.nonNull(order) ? order.name() : null)
+                .page(page)
+                .size(size)
+                .build();
+
+        ResponseEntity<List<DelegationResource>> result = ResponseEntity.status(HttpStatus.OK).body(delegationService.getDelegations(delegationParameters).stream()
                 .map(delegationMapper::toDelegationResource)
-                .collect(Collectors.toList()));
+                .toList());
         log.debug("getDelegationsUsingTo result = {}", result);
         log.trace("getDelegationsUsingTo end");
         return result;
